--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -11,6 +11,8 @@ on:
       - 'Plain Craft Launcher 2.sln'
       - 'Plain Craft Launcher 2/**'
       - '.github/workflows/**'
+      
+  workflow_dispatch:
 
 jobs:
 
